--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <tltle>CharlieMoomoo的作品</title>
 <link href="//dict.toastfriends.cf/style.css" rel="stylesheet" />
+<link href="//charlie-moomoo.github.io/CharlieHandwriting/beta.css" rel="stylesheet" />
 <h1><font>CharlieMoomoo的作品</font></h1>
