--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<tltle>CharlieMoomoo的作品</title>
+<title>CharlieMoomoo的作品</title>
 <link href="//dict.toastfriends.cf/style.css" rel="stylesheet" />
 <link href="//charlie-moomoo.github.io/CharlieHandwriting/beta.css" rel="stylesheet" />
-<h1><charliewrite>CharlieMoomoo的作品</charliewrite></h1>
+<charliewrite-title>CharlieMoomoo的作品</charliewrite-title>
