--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <title>CharlieMoomoo的作品</title>
 <link href="//dict.toastfriends.cf/style.css" rel="stylesheet" />
 <link href="//charlie-moomoo.github.io/CharlieHandwriting/beta.css" rel="stylesheet" />
+<style>
+  .radius {
+    border-radius:5px;
+  }
+</style>
 <charliewrite-title>CharlieMoomoo的作品</charliewrite-title>
