--- a/index.html
+++ b/index.html
@@ -7,3 +7,10 @@
   }
 </style>
 <charliewrite-title>CharlieMoomoo的作品</charliewrite-title>
+<table>
+  <tr>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+</table>
