--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   .radius {
     border-radius:5px;
   }
+  td {
+    width:33.3333333333;
+  }
 </style>
 <charliewrite-title>CharlieMoomoo的作品</charliewrite-title>
 <table>
