--- a/thanks.html
+++ b/thanks.html
@@ -1,3 +1,10 @@
+<link href="https://charlie-moomoo.github.io/CharlieHandwriting/beta.css" rel="stylesheet">
+<link href="//dict.toastfriends.cf/style.css" rel="stylesheet">
+<style>
+  a {
+    font-family:CharlieWriting !important;
+  }
+</style>
 <a href="https://zws.im/󠁷󠁵󠁴󠁯󠁣󠁶󠁴">https://medium.com/@small2883/html的id-class屬性介紹-css-的-class-和-id-兩者有何差異-25ce5315ece</a>
 <a href="https://zws.im/󠁷󠁣󠁪󠁵󠁰󠁳󠁰">https://www.wibibi.com/info.php?tid=119</a>
 <a href="https://zws.im/󠁪󠁦󠁹󠁯󠁫󠁤󠁱">https://developer.mozilla.org/zh-TW/docs/Web/HTML/Element/table</a>
