--- a/thanks.html
+++ b/thanks.html
@@ -2,7 +2,9 @@
 <link href="//dict.toastfriends.cf/style.css" rel="stylesheet">
 <style>
   a {
-    font-family:CharlieWriting !important;
+  font-family:CharlieHandwriting !important;
+  font-size:50px !important;
+  letter-spacing:-10px !important;
   }
 </style>
 <a href="https://zws.im/󠁷󠁵󠁴󠁯󠁣󠁶󠁴">https://medium.com/@small2883/html的id-class屬性介紹-css-的-class-和-id-兩者有何差異-25ce5315ece</a><br>
