--- a/thanks.html
+++ b/thanks.html
@@ -7,8 +7,9 @@
   letter-spacing:-10px !important;
   }
 </style>
+<a href="https://scratch.mit.edu/users/kiwichang2017/followers">我的關注者們</a><br>
+<a href="https://zws.im/󠁬󠁺󠁫󠁤‍‌󠁲">守寫字</a><br>
 <a href="https://zws.im/󠁷󠁵󠁴󠁯󠁣󠁶󠁴">https://medium.com/@small2883/html的id-class屬性介紹-css-的-class-和-id-兩者有何差異-25ce5315ece</a><br>
 <a href="https://zws.im/󠁷󠁣󠁪󠁵󠁰󠁳󠁰">https://www.wibibi.com/info.php?tid=119</a><br>
 <a href="https://zws.im/󠁪󠁦󠁹󠁯󠁫󠁤󠁱">https://developer.mozilla.org/zh-TW/docs/Web/HTML/Element/table</a><br>
-<a href="https://zws.im/󠁬󠁺󠁫󠁤‍‌󠁲">守寫字</a><br>
 <charliewrite>我的筆</charliewrite>
