--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link href="//charlie-moomoo.github.io/CharlieHandwriting/beta.css" rel="stylesheet" />
 <style>
   .radius {
-    border-radius:5px;
+    border-radius:10px;
   }
   td {
     width:33.3333333333%;
@@ -19,7 +19,7 @@
   <tr>
     <td>
 <div>
-<img width="33.333333333333%" class="radius" src="https://cdn2.scratch.mit.edu/get_image/project/418686503_9999x9999.png" /><br>
+<img class="radius" src="https://cdn2.scratch.mit.edu/get_image/project/418686503_9999x9999.png" /><br>
 <charliewrite-h2>如何知道誰有看過作品v2.0</charliewrite-h2>
 </div>
     </td>
