--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <tr>
     <td>
 <div>
-<img class="radius" src="https://cdn2.scratch.mit.edu/get_image/project/418686503_9999x9999.png" /><br>
+<img width="100%" class="radius" src="https://cdn2.scratch.mit.edu/get_image/project/418686503_9999x9999.png" /><br>
 <charliewrite-h2>如何知道誰有看過作品v2.0</charliewrite-h2>
 </div>
     </td>
