--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   }
   charliewrite-h2 {
   font-family: CharlieHandwriting;
-  font-size: 50px
+  font-size: 100%;
   letter-spacing:-10px
   }
 </style>
