--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   charliewrite-h2 {
   font-family: CharlieHandwriting;
   font-size: 100%;
-  letter-spacing:-10px
+  letter-spacing:-20%
   }
 </style>
 <charliewrite-title>CharlieMoomoo的作品</charliewrite-title>
