--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <table>
   <tr>
     <td>
-<div>
+<div><a href="https://scratch.mit.edu/projects/418686503">
 <img width="100%" class="radius" src="https://cdn2.scratch.mit.edu/get_image/project/418686503_9999x9999.png" /><br>
-<center><font>如何知道誰有看過作品v2.0</font></center>
+<center><font>如何知道誰有看過作品v2.0</font></center></a>
 </div>
     </td>
     <td></td>
