--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   font-size: 100%;
   letter-spacing:-20%
   }
+  charliewrite-title {
+    font-size: 100% !important;
+    letter-spacing:-20% !important;
+  }
 </style>
 <charliewrite-title>CharlieMoomoo的作品</charliewrite-title>
 <table>
