--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   }
   charliewrite-title {
     font-size: 100% !important;
-    letter-spacing:-20% !important;
+    letter-spacing:-20%;
   }
 </style>
 <charliewrite-title>CharlieMoomoo的作品</charliewrite-title>
