--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
 <center><font>Charlie手寫體</font></center></a>
 </div>
     </td>
-    <td></td>
+    <td>
+<div><a href="https://scratch.mit.edu/projects/490347287">
+<img width="100%" class="radius" src="https://cdn2.scratch.mit.edu/get_image/project/490347287_9999x9999.png" /><br>
+<center><font>文字列印</font></center></a>
+</div>
+    </td>
   </tr>
 </table>
