--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
 <center><font>進度條 100% Pen</font></center></a>
 </div>
       </td>
+    <td>
+<div><a href="https://discord.com/api/oauth2/authorize?client_id=836204711454834688&permissions=2048&redirect_uri=http%3A%2F%2Fcharlie-moomoo.github.io%2Fcow-login&scope=bot">
+<img width="100%" class="radius" src="/assets/cow.png" /><br>
+<center><font>牛牛</font></center></a>
+      </td>
       <td>
 <div><a href="https://github.com/charlie-moomoo/3dviewer/blob/main/README.md#top">
 <img width="100%" class="radius" src="/assets/3dviewer.png" /><br>
