--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@
   font-size: 100%;
   letter-spacing:-20%
   }
+  table {
+    z-index: 1      
+  }
+  div #whiteblock {
+    background-color: white;
+  }
 </style>
 <charliewrite-title>CharlieMoomoo的作品</charliewrite-title>
+<div id="whiteblock" width="100%" height="100%" />
 <table>
   <tr>
     <td>
