--- a/index.html
+++ b/index.html
@@ -13,17 +13,9 @@
   font-size: 100%;
   letter-spacing:-20%
   }
-  table {
-    z-index: 1      
-  }
-  div #whiteblock {
-    display: block;
-    background-color: white;
-  }
 </style>
 <charliewrite-title>CharlieMoomoo的作品</charliewrite-title>
-<div id="whiteblock" width="100%" height="100%" />
-<table>
+<table id="projects">
   <tr>
     <td>
 <div><a href="https://scratch.mit.edu/projects/418686503">
