--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   letter-spacing:-20%
   }
 </style>
+<script src="/fade.js">
+  fadein()
+  </script>
 <charliewrite-title>CharlieMoomoo的作品</charliewrite-title>
 <table id="projects">
   <tr>
