--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <script src="/fade.js">
   fadein()
   </script>
+<div id="top" />
 <charliewrite-title>CharlieMoomoo的作品</charliewrite-title>
 <table id="projects">
   <tr>
