--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   font-size: 100%;
   letter-spacing:-20%
   }
+  font #cw {
+    font-family: CharlieHandwriting;
+    letter-spacing: -20%
+  }
 </style>
 <script src="/fade.js">
   fadein()
@@ -30,7 +34,7 @@
     <td>      
 <div><a href="https://charlie-moomoo.github.io/CharlieHandwriting">
 <img width="100%" class="radius" src="/assets/charliewrite.png" /><br>
-<center><font>Charlie手寫體</font></center></a>
+<center><font id="cw">Charlie手寫體</font></center></a>
 </div>
     </td>
     <td>
