--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   letter-spacing:-20%
   }
   font #cw {
-    font-family: CharlieHandwriting;
-    letter-spacing: -20%
+    font-family: CharlieHandwriting !important;
+    letter-spacing: -20% !important;
   }
 </style>
 <script src="/fade.js">
