--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <title>CharlieMoomoo的作品</title>
 <link href="//dict.toastfriends.cf/style.css" rel="stylesheet" />
 <link href="//charlie-moomoo.github.io/CharlieHandwriting/beta.css" rel="stylesheet" />
+<script>
+  $0 = '要來我DC伺服器嗎https://discord.gg/YB6rQaHcWp'
+  console.log('要來我DC伺服器嗎https://discord.gg/YB6rQaHcWp')
+</script>
 <style>
   .radius {
     border-radius:10px;
